--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,9 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.3
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.21_1.0.0
 maven_group=com.megatrex4
 archives_base_name=pathspeed
 
 # Dependencies
 fabric_version=0.102.0+1.21
-cloth_config_version=15.0.130
-modmenu_version=11.0.1
